testdata/baselines/reference/submodule/conformance/jsDeclarationsExportFormsErr.errors.txt
bin.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
globalNs.js(2,1): error TS1315: Global module exports may only appear in declaration files.
globalNs.js(2,1): error TS1315: Global module exports may only appear in declaration files.


==== cls.js (0 errors) ====
    export class Foo {}
    
==== bar.js (0 errors) ====
    import ns = require("./cls");
    export = ns; // TS Only
    
==== bin.js (1 errors) ====
    import * as ns from "./cls";
    module.exports = ns; // We refuse to bind cjs module exports assignments in the same file we find an import in
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== globalNs.js (2 errors) ====
    export * from "./cls";
    export as namespace GLO; // TS Only
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    
==== includeAll.js (0 errors) ====
    import "./bar";
    import "./bin";
    import "./globalNs";
    